Fix import statements

--- a/lion-vs-cheetah.ipynb
+++ b/lion-vs-cheetah.ipynb
@@ -11,18 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "import shutil\n",
     "import random\n",
-    "from shutil import copyfile\n",
+    "import shutil\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-    "from tensorflow.keras.applications import InceptionV3"
+    "from tensorflow.keras.applications import InceptionV3\n",
+    "from tensorflow.keras.optimizers import RMSprop"
    ]
   },
   {
@@ -213,8 +213,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.optimizers import RMSprop\n",
-    "\n",
     "def create_model():\n",
     "\n",
     "    pre_trained_model = InceptionV3(input_shape=(150, 150, 3),\n",
