--- a/lion-vs-cheetah.ipynb
+++ b/lion-vs-cheetah.ipynb
@@ -20,6 +20,7 @@
     "import shutil\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
+    "from shutil import copyfile\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from tensorflow.keras.applications import InceptionV3\n",
     "from tensorflow.keras.optimizers import RMSprop"
